# ChangeLog for sys-apps/raidtools
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/raidtools/ChangeLog,v 1.12 2003/07/08 02:13:54 caleb Exp $

  07 Jul 2003; Caleb Tennis <caleb@gentoo.org> raidtools-1.00.3-r1.ebuild:
  Applied Redhat gcc33 compile patch - closes bug #24033

*raidtools-1.00.3-r1 (17 Feb 2003)

  02 Jul 2003; Guy Martin <gmsoft@gentoo.org> raidtools-1.00.3-r1.ebuild :
  Marked stable on hppa.

  25 Mar 2003; Guy Martin <gmsoft@gentoo.org> raidtools-1.00.3-r1.ebuild :
  Added ~hppa to KEYWORDS.

  17 Feb 2003; Mike Frysinger <vapier@gentoo.org> :
  Makefile install works now so changed over to fix #15826.

*raidtools-1.00.3 (16 Feb 2003)

  16 Feb 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bump/updates.

*raidtools-0.90-r2 (22 Jun 2002)

  14 Jul 2002; phoen][x <phoenix@gentoo.org> raidtools-0.90-r2.ebuild :
  Added LICENSE, KEYWORDS, SLOT.

  22 June 2002; Mark Guertin <gerk@gentoo.org> raidtools-0.90-r2.ebuild :
  Adjusted bad sed command which was breaking G4 CFLAGS
  (was stripping all "-g" now strips " -g" to " ")

  12 Mar 2002; Seemant Kulleen <seemant@gentoo.org> raidtools-0.90-r2.ebuild :
  HTML documentation no longer gets gzipped.  Does not require a revision bump
  though.  Thanks to stefan@mdy.univie.ac.at for pointing it out.

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.