@@ -1,6 +1,6 @@
-MD5 14f30dd57249d37386f26f0250be2d9c ChangeLog 1790
-MD5 712be323ed53760040117e4dff808dd2 raidtools-0.90-r2.ebuild 1211
-MD5 3fc64e3a017a787348c3b840c96a255d raidtools-1.00.3-r1.ebuild 1057
+MD5 34eaa14cc28dd276ff91ce9d053aee85 ChangeLog 1943
+MD5 ddce15b5cdb6e8e26466725c3351082a raidtools-0.90-r2.ebuild 1214
+MD5 d40c6bef8a93219091f0123490422251 raidtools-1.00.3-r1.ebuild 1062
 MD5 b71f5a7d7befa267454ef03173daedfe files/digest-raidtools-0.90-r2 85
 MD5 54b6277ec8d8f24e23ece051ea2e8680 files/digest-raidtools-1.00.3-r1 68
 MD5 9193117eae2cca6725886db3d163e227 files/mkraid.c-gcc33.patch 3042
