@@ -1,12 +1,12 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/raidtools/raidtools-1.00.3-r1.ebuild,v 1.7 2003/07/16 14:01:07 pvdabeel Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/raidtools/raidtools-1.00.3-r1.ebuild,v 1.8 2003/08/13 18:04:30 wwoods Exp $
 
 DESCRIPTION="Linux RAID 0/1/4/5 utilities"
 SRC_URI="http://people.redhat.com/mingo/raidtools/${P}.tar.gz"
 HOMEPAGE="http://people.redhat.com/mingo/raidtools/"
 
-KEYWORDS="x86 amd64 ppc ~sparc hppa"
+KEYWORDS="x86 amd64 ppc ~sparc hppa ~alpha"
 SLOT="0"
 LICENSE="GPL-2"
 
