@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/raidtools
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/raidtools/ChangeLog,v 1.12 2003/07/08 02:13:54 caleb Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/raidtools/ChangeLog,v 1.13 2003/08/13 18:04:30 wwoods Exp $
+
+  13 Aug 2003; Will Woods <wwoods@gentoo.org> raidtools-0.90-r2.ebuild,
+  raidtools-1.00.3-r1.ebuild:
+  Marked 0.90 stable for alpha and 1.00.3 ~alpha
 
   07 Jul 2003; Caleb Tennis <caleb@gentoo.org> raidtools-1.00.3-r1.ebuild:
   Applied Redhat gcc33 compile patch - closes bug #24033
